test/conformance/chainsaw/generate/clusterpolicy/cornercases/data-role-and-rolebinding/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: gen-role-policy
spec:
  background: false
  rules:
  - generate:
      apiVersion: rbac.authorization.k8s.io/v1
      data:
        rules:
        - apiGroups:
          - ""
          resources:
          - pods
          verbs:
          - get
          - watch
          - list
      kind: Role
      name: ns-role
      namespace: '{{request.object.metadata.name}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
    name: gen-role
  - generate:
      apiVersion: rbac.authorization.k8s.io/v1
      data:
        roleRef:
          apiGroup: rbac.authorization.k8s.io
          kind: Role
          name: ns-role
          namespace: '{{request.object.metadata.name}}'
        subjects:
        - apiGroup: rbac.authorization.k8s.io
          kind: User
          name: minikube-user
      kind: RoleBinding
      name: ns-role-binding
      namespace: '{{request.object.metadata.name}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
    name: gen-role-binding
