test/conformance/chainsaw/generate/clusterpolicy/cornercases/data-role-and-rolebinding/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: gen-role-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
