test/conformance/chainsaw/generate/clusterpolicy/cornercases/data-role-and-rolebinding/03-assert.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: ns-role
  namespace: generate-role-tests
rules:
- apiGroups:
  - ""
  resources:
  - pods
  verbs:
  - get
  - watch
  - list
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: ns-role-binding
  namespace: generate-role-tests
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: ns-role
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: minikube-user
