test/conformance/chainsaw/generate/clusterpolicy/cornercases/data-role-and-rolebinding/chainsaw-step-03-assert-1-2.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: ns-role-binding
  namespace: generate-role-tests
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: ns-role
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: minikube-user
